ReplBatcher thread must handle exceptions

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.0.6, 4.1.7
    • Affects Version/s: 4.0.4, 4.1.5
    • Component/s: Replication
    • None
    • Fully Compatible
    • ALL
    • v4.0
    • Repl 2018-12-17
    • 45
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The ReplBatcher thread takes a lock in OplogBufferCollection::_peek_inlock(), which is called from SyncTail::tryPopAndWaitForMore(). If the OperationContext is interrupted due to shutdown, this lock acquisition can throw. However, the ReplBatcher thread is not written to handle exceptions. The ReplBatcher either needs to handle exceptions or use an UninterruptibleLockGuard.

            Assignee:
            Tess Avitabile (Inactive)
            Reporter:
            Tess Avitabile (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: