SERVER-38052 Use UninterruptibleLockGuard in ReplBatcher thread